Stop justifying blog text, it looks odd with big gaps

--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -30,5 +30,5 @@
 }
 
 .blogContent {
-    text-align: justify;
+    text-align: left;
 }
